changed the add task activity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,8 +16,10 @@
     <string name="cntV_taskUrgency">Task Urgency</string>
     <string name="cntV_taskLocation">Specify Location</string>
     <string name="cntV_taskDescription">Description</string>
-    <string name="cntV_taskDefineTimeRange">Specify remind days</string>
+    <string name="cntV_taskDefineTimeRange">Specify remind days and time</string>
+    <string name="cntV_taskDefineTimeRangeButtonText">Specify</string>
     <string name="cntV_taskspecifyReminderMode">Specify the remind mode</string>
-    <string name="cntV_taskChooseLocation">Choose Location</string>
+    <string name="cntV_taskChooseLocation">Choose Task Location</string>
+    <string name="cntV_taskChooseLocationButtonText">Choose</string>
     <string name="cntV_taskSpecifyRange">Specify reminding range</string>
 </resources>
