--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,4 +22,18 @@
     <string name="cntV_taskChooseLocation">Choose Task Location</string>
     <string name="cntV_taskChooseLocationButtonText">Choose</string>
     <string name="cntV_taskSpecifyRange">Specify reminding range</string>
+    
+    <!-- main view elements -->
+    <string name="main_createNewTask">Create new task</string>
+    <string name="main_showAllTask">Show all task</string>
+    
+    <!-- chooseremindingtime view elements -->
+    <string name="to">to</string>
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
 </resources>
