--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="ok">ok</string>
     <string name="cancel">cancel</string>
     <string name="save">save</string>
+    <string name="close">Close</string>
     
     
     <!-- createnewtask view elements -->
@@ -26,6 +27,7 @@
     <!-- main view elements -->
     <string name="main_createNewTask">Create new task</string>
     <string name="main_showAllTask">Show all task</string>
+    <string name="main_settings">Settings</string>
     
     <string name="clom_search">Search location</string>
     <string name="clom_title">Enter a location</string>
@@ -43,4 +45,16 @@
     <string name="editTask">Edit Task</string>
     <string name="deleteTask">Delete Task</string>
     <string name="completeTask">Complete Task</string>
+    <string name="showTask">Show Task</string>
+    
+    <string name="notificationTitle">Location Reminder</string>
+    <string name="notificationText">Task near your location detected</string>
+    
+    <string name="searchLocationTitle">Enter a location</string>
+    <string name="searchLocationWrong">Please Provide the Proper Place</string>
+    
+    <!-- preferences view -->
+    <string name="pv_Alarm">Alarm</string>
+    <string name="pv_Vibrator">Vibrator</string>
+    <string name="pv_Sound">Sound</string>
 </resources>
