Cover and Table of Contents added.

--- a/docs/LocationReminder/source/layout/LocationReminder.tex
+++ b/docs/LocationReminder/source/layout/LocationReminder.tex
@@ -4,6 +4,9 @@
 \usepackage{graphicx}
 
 \begin{document}
+\input{../content/00_Cover}
+\tableofcontents
+\newpage
 \input{../content/01_Introduction}
 \input{../content/02_Requirements}
 \input{../content/03_Architecture}
