Started with architecture

--- a/docs/LocationReminder/source/content/03_Architecture.tex
+++ b/docs/LocationReminder/source/content/03_Architecture.tex
@@ -3,3 +3,7 @@
 TODO wenn task gesolved ist wird sie nicht mehr vom service beruecksichtigt
 \subsection{Components}
 \subsection{Used Technologies}
+The application is written in Java and built with Eclipse. The SQL Lite database
+was used to persist the tasks and further vital information. Android API were
+used to determine the current location. The Google Maps API was used to visually
+represent the coordinates.
